@@ -1,5 +1,7 @@
 package com.gestaooserp.dev.service;
 
+import com.gestaooserp.dev.dto.request.ClienteJuridicoRequestDTO;
+import com.gestaooserp.dev.dto.response.ClienteJuridicoResponseDTO;
 import com.gestaooserp.dev.entity.ClienteJuridico;
 import com.gestaooserp.dev.repository.ClienteJuridicoRepository;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -10,11 +12,8 @@ import java.util.stream.Collectors;
 
 /*
  * TODO:
- * - Implementar DTOs para requests/responses
- * - Logo apos implementar DTO, implementar metodo save
  * - Adicionar validações de negócio
  * - Integrar tratamento global de exceções
- * - Melhorar separação entre domínio e camada HTTP
  */
 
 @Service
@@ -22,27 +21,32 @@ public class ClienteJuridicoService {
 
     private final ClienteJuridicoRepository clienteJuridicoRepository;
 
-    @Autowired
     public ClienteJuridicoService(ClienteJuridicoRepository clienteJuridicoRepository){
         this.clienteJuridicoRepository = clienteJuridicoRepository;
     }
 
-    public List<ClienteJuridico> findAll(){
-        List<ClienteJuridico> clienteJuridicoServiceList = clienteJuridicoRepository.findAll();
-        return clienteJuridicoServiceList.stream().map(ClienteJuridico::new).collect(Collectors.toList());
+    public List<ClienteJuridicoResponseDTO> findAll(){
+        List<ClienteJuridico> clienteJuridicoList = clienteJuridicoRepository.findAll();
+        return clienteJuridicoList.stream().map(ClienteJuridicoResponseDTO::new).toList();
     }
 
-    public ClienteJuridico findById(Long id){
-        return clienteJuridicoRepository.findById(id).orElse(null);
+    public ClienteJuridicoResponseDTO findById(Long id){
+        return new ClienteJuridicoResponseDTO(clienteJuridicoRepository.findById(id).orElse(null));
     }
 
-    public ClienteJuridico save(ClienteJuridico clienteJuridico){
-        return null; //TODO: implentar DTO
+    public ClienteJuridicoResponseDTO save(ClienteJuridicoRequestDTO requestDTO){
+        ClienteJuridico clienteJuridico = new ClienteJuridico();
+
+        return new ClienteJuridicoResponseDTO(clienteJuridicoRepository.save(
+                updateClienteJuridico(clienteJuridico,requestDTO)));
     }
 
-    public ClienteJuridico update(Long id,ClienteJuridico clienteJuridico ){
-        if(clienteJuridicoRepository.findById(id).isPresent()){
-            return clienteJuridicoRepository.save(clienteJuridico);
+    public ClienteJuridicoResponseDTO update(Long id,ClienteJuridicoRequestDTO requestDTO ){
+        ClienteJuridico clienteJuridico = clienteJuridicoRepository.findById(id).orElse(null);
+        if(clienteJuridico != null){
+
+            return new ClienteJuridicoResponseDTO(clienteJuridicoRepository.save(
+                    updateClienteJuridico(clienteJuridico,requestDTO)));
         }
         return null;
     }
@@ -54,5 +58,20 @@ public class ClienteJuridicoService {
             return true;
         }
         return false;
+    }
+
+    private ClienteJuridico updateClienteJuridico(ClienteJuridico clienteJuridico,ClienteJuridicoRequestDTO requestDTO){
+
+        clienteJuridico.setCnpj(requestDTO.cnpj());
+        clienteJuridico.setRazaoSocial(requestDTO.razaoSocial());
+        clienteJuridico.setNomeFantasia(requestDTO.nomeFantasia());
+        clienteJuridico.setEndereco(requestDTO.endereco());
+        clienteJuridico.setCidade(requestDTO.cidade());
+        clienteJuridico.setEstado(requestDTO.estado());
+        clienteJuridico.setEmail(requestDTO.email());
+        clienteJuridico.setCep(requestDTO.cep());
+        clienteJuridico.setCel(requestDTO.cel());
+
+        return clienteJuridico;
     }
 }
